fix(docs): make code block copy button visible in light mode

--- a/docs/suspensive.org/src/app/[lang]/styles.css
+++ b/docs/suspensive.org/src/app/[lang]/styles.css
@@ -34,6 +34,10 @@ pre {
   @apply rounded-lg bg-zinc-900;
 }
 
+pre button {
+  @apply text-white;
+}
+
 .dark pre {
   @apply border-gray-900 bg-inherit;
 }
